test/errors/circular-dependencies-two/packages/library-core/index.ts
export * from './src/library.module';
export * from './src/form-control-registry/form-control-registry.service';
